# Cini

./: .gitignore  CMakeLists.txt  do.sh
inc-c/: cini.h
inc-c/cini/: document.h  enumerations.h  parser.h  utility.h
src-c/: document.c  parser.c  utility.c
